Add tests for Grails plugin